# ultrathink

./: .gitignore  README.md  hatch_build.py  pyproject.toml
scripts/: build_frontend.sh  verify_web.py
tests/: __init__.py  test_config.py  test_session.py
ultrathink/: __init__.py  __main__.py
ultrathink/api/: __init__.py  app.py
ultrathink/api/models/: __init__.py  assistant.py  message.py  run.py  thread.py
ultrathink/api/routes/: __init__.py  assistants.py  health.py  runs.py  threads.py
ultrathink/api/services/: __init__.py  assistant_registry.py  stream_manager.py  thread_store.py
ultrathink/cli/: __init__.py  main.py
ultrathink/cli/commands/: __init__.py  base.py
ultrathink/cli/ui/: __init__.py  interactive_menu.py  message_renderer.py  rich_console.py  tab_questions.py  thinking_spinner.py
ultrathink/core/: __init__.py  agent_factory.py  config.py  parallel_executor.py  session.py  system_prompt.py  token_estimation.py
ultrathink/mcp/: __init__.py  config_loader.py  runtime.py  tool_adapter.py
ultrathink/middleware/: __init__.py  mcp_integration.py
ultrathink/models/: __init__.py  deepseek_reasoner.py
ultrathink/sdk/: __init__.py  client.py
ultrathink/subagents/: __init__.py  definitions.py  loader.py
ultrathink/tools/: __init__.py  ask_user.py  filesystem.py  task_tool.py  todo_tool.py
ultrathink/utils/: __init__.py  memory.py  todo.py
ultrathink/web/: next.config.ts  package-lock.json  package.json
ultrathink/web/src/app/: page.tsx
ultrathink/web/src/app/components/: ConfigDialog.tsx
ultrathink/web/src/app/hooks/: useChat.ts
ultrathink/web/src/providers/: ChatProvider.tsx  ClientProvider.tsx
